# artdeco

./: .dockerignore  .gitlab-ci.yml  .gitlab_ci.yml  Cargo.toml  Dockerfile  README.md  TODO.md  build.rs  docker-compose.yaml  example-trace.yaml  nats.conf
.devcontainer/: Dockerfile.workspace  devcontainer.json  docker-compose.workspace.yaml
.github/workflows/: build-containers.yaml  ci.yml
artdeco/: Cargo.toml  build.rs
artdeco/src/: consumer.rs  lib.rs  nats.rs  offloader.rs  util.rs
artdeco/src/connection/: mod.rs  packet.rs  rtc_connection.rs
artdeco/src/daemon/: generic.rs  mod.rs  nats.rs  wasimoff.rs
artdeco/src/protocol/: mod.rs
artdeco/src/provider/: mod.rs  wasimoff.rs
artdeco/src/scheduler/: bandit.rs  drift.rs  fixed.rs  mod.rs  roundrobin.rs
artdeco/src/task/: mod.rs
cmd/demo-delay/: Cargo.toml
cmd/demo-delay/src/: main.rs
cmd/fib-test/: Cargo.toml
cmd/fib-test/src/: main.rs
cmd/integration-test/: Cargo.toml
cmd/integration-test/src/: main.rs
cmd/wasimoff-adaptor/: Cargo.toml
cmd/wasimoff-adaptor/src/: main.rs
eval/fib-test/: Cargo.toml
eval/fib-test/src/: main.rs
eval/task-scheduler/: Cargo.toml
eval/task-scheduler/src/: main.rs
eval/wasimoff-adaptor/: Cargo.toml
eval/wasimoff-adaptor/src/: main.rs
proto/: deco.proto  wasimoff.proto
src/: main.rs  scheduler.rs
wasi-apps/: README.txt
wasi-apps/fibonacci/: exe.wasm
