[package]
name = "artdeco"
version = "0.1.0"
edition = "2024"

[features]
default = ["nats"]
nats = ["dep:async-nats"]

[dependencies]
async-nats = { version = "0.42", optional = true }
nid = { version = "3.0", features = ["serde"] }
tokio = { version = "1", features = ["rt", "macros", "net"] }
futures = "0.3"
anyhow = "1"
protobuf = "3"
tokio-stream = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
str0m = "0.11"
systemstat = "0.2"
bytes = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
slab = "0.4"
stun-proto = { version = "1.0.0", features = ["std"] }
sans-io-time = { version = "0.1" }
rand = "0.9"
lazy_static = "1.5.0"
bytesize = "2.1.0"
pin-project-lite = "0.2.16"
indexmap = "2.12.0"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"
