[package]
name = "fib-test"
version = "0.1.0"
edition = "2024"

[dependencies]
artdeco = { path = "../../artdeco", features = ["nats"] }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
] }
tokio-stream = "0.1"
anyhow = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
