[package]
name = "wasimoff-adaptor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
artdeco = { path = "../../artdeco", features = ["nats"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
